<resources>
    <string name="app_name">GestionFallout</string>
    <string name="button_bag">Inventaire</string>
    <string name="button_notes">Notes</string>
    <string name="button_abilities">Aptitudes</string>
    <string name="button_form">Fiche</string>
    <string name="title_form">Fiche</string>
    <string name="title_bag">Inventaire</string>
    <string name="title_notes">Notes</string>
    <string name="title_abilities">Aptitudes</string>
    <string name="tv_bag">Contenu de l\'inventaire</string>
    <string name="tv_strong">FOR </string>
    <string name="tv_perception">PER </string>
    <string name="tv_endurance">END </string>
    <string name="tv_charisma">CHR </string>
    <string name="tv_intelligence">INT </string>
    <string name="tv_agility">AGI </string>
    <string name="tv_luck">CHA </string>
    <string name="tv_race">Origine </string>
    <string name="tv_pseudo">Pseudo </string>
    <string name="tv_level">Niv. </string>
    <string name="tv_exp">EXP </string>
    <string name="tv_skills">Compétences</string>
    <string name="tv_abilities">Aptitudes</string>
    <string name="tv_ini">INI </string>
    <string name="tv_hp">PV </string>
    <string name="tv_def_ra">DEF RA </string>
    <string name="tv_pa">PA </string>
    <string name="tv_launch_dice">Lancer dés</string>
    <string name="tv_caps">Capsules </string>
    <string name="tv_weight">Poids total</string>
    <string name="tv_notes">Toutes mes notes</string>
    <string name="button_add">Ajouter</string>
    <string name="button_delete">Supprimer</string>
    <string name="tv_def">DEF </string>
    <string name="choice_dice">Choisir le nombre de dès 20 à lancer</string>
    <string name="choice_skill">Choisir la compétence à utiliser</string>
    <string name="choice_SPECIAL">Choisir la statistique à tester</string>
    <string name="choice_complication">Choisir le niveau de complication</string>
    <string name="launch">Lancer</string>
    <string name="notEnoughPA">Impossible ! Pas assez de PA </string>
    <string name="pseudoTooLong">Pseudo trop long ! Écrasement des derniers caractères</string>
    <string name="new_sheet">Nouvelle fiche</string>
    <string name="title_sheet">Choisir personnage</string>
    <string name="button_save">Créer</string>
    <string name="problemPersonalAsset">Impossible de choisir cet atout personnel : niveau de la compétence supérieur à 3 et le niveau du joueur est inférieur à 3 !</string>
    <string name="cantCreate">Veuillez choisir un pseudo et une origine !</string>
    <string name="problemSPECIAL">(1) D\'abord choisir un nom, une origine et créer \n(2) Total des statistiques supérieur à 40 \n(3) OU statistique inférieure à 4 \n(4) OU statistique supérieure à 10</string>
</resources>